// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlRadioSet all options renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper="bg-red-light"
  validationError="oh no!"
>
  <fieldset>
    <ControlLegend
      aside={
        <span>
          Aside text
        </span>
      }
      id="testinput"
      optional={true}
      text="All options"
      themeLegend="color-white"
    />
    <div
      aria-invalid={true}
      aria-required={false}
      data-test="testinput-input"
      id="testinput"
      role="radiogroup"
    >
      <label
        className="radio-container w-full"
        key="Option value 1"
      >
        <input
          autoFocus={true}
          checked={true}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 1"
        />
        <div
          className="radio--white radio--active-red mr6 radio"
        />
        <span>
          Option 1
        </span>
      </label>
      <label
        className="radio-container w-full"
        key="Option value 2"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 2"
        />
        <div
          className="radio--white radio--active-red mr6 radio"
        />
        <span>
          Option 2
        </span>
      </label>
      <label
        className="radio-container w-full"
        key="Option value 3"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 3"
        />
        <div
          className="radio--white radio--active-red mr6 radio"
        />
        <span>
          Option 3
        </span>
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;

exports[`ControlRadioSet basic onChange gets called with input id and value 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <fieldset>
    <ControlLegend
      id="testinput"
      optional={false}
      text="Basic"
      themeLegend="txt-s txt-bold mb6"
    />
    <div
      aria-required={true}
      data-test="testinput-input"
      id="testinput"
      role="radiogroup"
    >
      <label
        className="radio-container txt-s block mb6 flex"
        key="Option value 1"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 1"
        />
        <div
          className="mr6 radio--blue radio--s-label inline-block  radio"
        />
        Option 1
      </label>
      <label
        className="radio-container txt-s block mb6 flex"
        key="Option value 2"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 2"
        />
        <div
          className="mr6 radio--blue radio--s-label inline-block  radio"
        />
        Option 2
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;

exports[`ControlRadioSet basic renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <fieldset>
    <ControlLegend
      id="testinput"
      optional={false}
      text="Basic"
      themeLegend="txt-s txt-bold mb6"
    />
    <div
      aria-required={true}
      data-test="testinput-input"
      id="testinput"
      role="radiogroup"
    >
      <label
        className="radio-container txt-s block mb6 flex"
        key="Option value 1"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 1"
        />
        <div
          className="mr6 radio--blue radio--s-label inline-block  radio"
        />
        Option 1
      </label>
      <label
        className="radio-container txt-s block mb6 flex"
        key="Option value 2"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 2"
        />
        <div
          className="mr6 radio--blue radio--s-label inline-block  radio"
        />
        Option 2
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;

exports[`ControlRadioSet disabled renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <fieldset>
    <ControlLegend
      id="testinput"
      optional={false}
      text="Disabled"
      themeLegend="txt-s txt-bold mb6"
    />
    <div
      aria-required={true}
      data-test="testinput-input"
      id="testinput"
      role="radiogroup"
    >
      <label
        className="radio-container txt-s block mb6 flex"
        key="Option value 1"
      >
        <input
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 1"
        />
        <div
          className="mr6 radio--blue radio--s-label inline-block  radio"
        />
        Option 1
      </label>
      <label
        className="radio-container txt-s block mb6 flex"
        key="Option value 2"
      >
        <input
          autoFocus={false}
          checked={false}
          disabled={true}
          name="testinput"
          onChange={[Function]}
          type="radio"
          value="Option value 2"
        />
        <div
          className="mr6 radio--blue radio--s-label inline-block  radio"
        />
        Option 2
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;
